# HideQR

./: Cargo.toml  LICENSE  README.md
src/: commands.rs  lib.rs  main.rs
