[package]
name = "hide_qr"
version = "0.1.0"
edition = "2021"
authors = ["Erion Leka <erionleka1709@gmail.com>"]
description = "A tool for creating QR codes with hidden messages."
license = "MIT"
repository = "https://github.com/bompidom/HideQR"
keywords = ["QR", "rust", "steganography", "secret", "hide"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcodegen = {git = "https://github.com/nayuki/QR-Code-generator.git"}
image = "0.25.2"
rqrr = {git = "https://github.com/bompidom/rqrr.git"}
tempfile = "3.13.0"
