[package]
name = "hide_qr"
version = "1.0.0"
edition = "2021"
authors = ["Erion Leka <erionleka1709@gmail.com>"]
description = "A tool for creating QR codes with hidden messages."
license = "MIT"
repository = "https://github.com/bompidom/HideQR"
keywords = ["QR", "rust", "steganography", "secret", "hide"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcodegen = "1.8.0"
image = "0.25.2"
rqrr = {git = "https://github.com/bompidom/rqrr.git", tag = "v0.7.1"}
tempfile = "3.13.0"
